pkg/ibmvpc/examples/out/explain_out/externalToSubnet_all_vpcs_explain_detail.txt
Explaining connectivity from 161.26.0.0 to subnet3-ky within test-vpc1-ky
Interpreted source: 161.26.0.0 (external)
Interpreted destination: vsi3a-ky[10.240.30.5], vsi3b-ky[10.240.30.4], db-endpoint-gateway-ky[10.240.30.6]
=========================================================================

No connections from Public Internet 161.26.0.0/32 to db-endpoint-gateway-ky[10.240.30.6];
	connection is blocked at ingress and because there is no resource for external connectivity

Ingress: network ACL acl3-ky allows connection; security group sg3-ky does not allow connection

Path:
	Public Internet 161.26.0.0/32 -> 
	| no resource for external connectivity |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			name: inbound, priority: 1, action: allow, direction: inbound, source: 0.0.0.0/0, destination: 0.0.0.0/0, protocol: all
		security group sg3-ky has no relevant allow rules

------------------------------------------------------------------------------------------------------------------------

No connections from Public Internet 161.26.0.0/32 to vsi3a-ky[10.240.30.5];
	connection is blocked at ingress and because there is no resource for external connectivity

Ingress: network ACL acl3-ky allows connection; security group sg3-ky does not allow connection

Path:
	Public Internet 161.26.0.0/32 -> 
	| no resource for external connectivity |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			name: inbound, priority: 1, action: allow, direction: inbound, source: 0.0.0.0/0, destination: 0.0.0.0/0, protocol: all
		security group sg3-ky has no relevant allow rules

------------------------------------------------------------------------------------------------------------------------

No connections from Public Internet 161.26.0.0/32 to vsi3b-ky[10.240.30.4];
	connection is blocked at ingress and because there is no resource for external connectivity

Ingress: network ACL acl3-ky allows connection; security group sg2-ky does not allow connection

Path:
	Public Internet 161.26.0.0/32 -> 
	| no resource for external connectivity |


Details:
~~~~~~~~
Path is disabled; The relevant rules are:
	Ingress:
		network ACL acl3-ky allows connection with the following allow rules
			name: inbound, priority: 1, action: allow, direction: inbound, source: 0.0.0.0/0, destination: 0.0.0.0/0, protocol: all
		security group sg2-ky has no relevant allow rules

------------------------------------------------------------------------------------------------------------------------
